OC-126: refactor(timetable): consolidate swap-service conflict checks onto shared validation
TimetableSwapService.evaluateSlot and FacultySessionSwapService's
faculty-move checks each independently reimplemented faculty conflict/
availability logic instead of reusing TimetableStaffingService's
shared, already-validated checks, and neither rechecked workload caps
-- a swap could push a faculty member over their configured daily/
weekly/continuous-hours cap with nothing catching it. Both now
delegate to checkFacultyAvailable/checkFacultyFree/
checkWithinWorkloadCaps.

Widened from TimetableSwapService's old DRAFT-only scope and
FacultySessionSwapService's old PUBLISHED-only scope to DRAFT+
PUBLISHED in both, closing a gap where a draft swap could land on a
slot a live PUBLISHED session already occupies. Safety refinement:
a PUBLISHED occupant can never become a swap partner in
TimetableSwapService (only DRAFT), since that service only ever
reschedules DRAFT rows -- silently moving a live session would be a
real bug. Faculty-conflict detection (not availability/caps) stays
hand-rolled in TimetableSwapService's own overlap loop rather than
calling checkFacultyFree directly, since the reverse-swap check needs
to exclude two rows (the occupant and the session it's vacating) and
checkFacultyFree's contract only supports excluding one.

swap()/applySwap() now throw TimetableConstraintViolationException
with the specific violation reason instead of a generic "slot
unavailable" message, matching the pattern Staffing/Skeleton/Conflict
Inspector already use. Two frontend error handlers (staff session
swap, draft review swap) updated to render it via the shared
violationText() helper instead of the raw semicolon-joined message.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>